--- a/api/server/utils/emails/inviteUser.handlebars
+++ b/api/server/utils/emails/inviteUser.handlebars
@@ -22,30 +22,82 @@
     <!--<![endif]-->
     <title></title>
     <style type='text/css'>
-      @media (prefers-color-scheme: dark) { .darkmode { background-color: #212121 !important; }
-      .darkmode p { color: #ffffff !important; } } @media only screen and (min-width: 520px) {
-      .u-row { width: 500px !important; } .u-row .u-col { vertical-align: top; } .u-row .u-col-100 {
-      width: 500px !important; } } @media (max-width: 520px) { .u-row-container { max-width: 100%
-      !important; padding-left: 0px !important; padding-right: 0px !important; } .u-row .u-col {
-      min-width: 320px !important; max-width: 100% !important; display: block !important; } .u-row {
-      width: 100% !important; } .u-col { width: 100% !important; } .u-col>div { margin: 0 auto; } }
-      body { margin: 0; padding: 0; } table, tr, td { vertical-align: top; border-collapse:
-      collapse; } p { margin: 0; } .ie-container table, .mso-container table { table-layout: fixed;
-      } * { line-height: inherit; } a[x-apple-data-detectors='true'] { color: inherit !important;
-      text-decoration: none !important; } table, td { color: #ffffff; } #u_body a { color: #0000ee;
-      text-decoration: underline; }
+      @media only screen and (min-width: 520px) {
+        .u-row {
+          width: 500px !important;
+        }
+        .u-row .u-col {
+          vertical-align: top;
+        }
+        .u-row .u-col-100 {
+          width: 500px !important;
+        }
+      }
+      @media (max-width: 520px) {
+        .u-row-container {
+          max-width: 100% !important;
+          padding-left: 0px !important;
+          padding-right: 0px !important;
+        }
+        .u-row .u-col {
+          min-width: 320px !important;
+          max-width: 100% !important;
+          display: block !important;
+        }
+        .u-row {
+          width: 100% !important;
+        }
+        .u-col {
+          width: 100% !important;
+        }
+        .u-col>div {
+          margin: 0 auto;
+        }
+      }
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      table,
+      tr,
+      td {
+        vertical-align: top;
+        border-collapse: collapse;
+      }
+      p {
+        margin: 0;
+      }
+      .ie-container table,
+      .mso-container table {
+        table-layout: fixed;
+      }
+      * {
+        line-height: inherit;
+      }
+      a[x-apple-data-detectors='true'] {
+        color: inherit !important;
+        text-decoration: none !important;
+      }
+      table,
+      td {
+        color: #000000;
+      }
+      #u_body a {
+        color: #0000ee;
+        text-decoration: underline;
+      }
     </style>
   </head>
 
   <body
     class='clean-body u_body'
-    style='margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #212121;color: #ffffff'
+    style='margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #ffffff;color: #000000'
   >
     <!--[if IE]><div class="ie-container"><![endif]-->
     <!--[if mso]><div class="mso-container"><![endif]-->
     <table
       id='u_body'
-      style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #212121;width:100%'
+      style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%'
       cellpadding='0'
       cellspacing='0'
     >
@@ -54,7 +106,7 @@
           <td
             style='word-break: break-word;border-collapse: collapse !important;vertical-align: top'
           >
-            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td align="center" style="background-color: #212121;"><![endif]-->
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td align="center" style="background-color: #ffffff;"><![endif]-->
             <div class='u-row-container' style='padding: 0px;background-color: transparent'>
               <div
                 class='u-row'
@@ -64,13 +116,13 @@
                   style='border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;'
                 >
                   <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:500px;"><tr style="background-color: transparent;"><![endif]-->
-                  <!--[if (mso)|(IE)]><td align="center" width="500" style="background-color: #212121;width: 500px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top"><![endif]-->
+                  <!--[if (mso)|(IE)]><td align="center" width="500" style="background-color: #ffffff;width: 500px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top"><![endif]-->
                   <div
                     class='u-col u-col-100'
                     style='max-width: 320px;min-width: 500px;display: table-cell;vertical-align: top;'
                   >
                     <div
-                      style='background-color: #212121;height: 100%;width: 100% !important;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;'
+                      style='background-color: #ffffff;height: 100%;width: 100% !important;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;'
                     >
                       <!--[if (!mso)&(!IE)]><!-->
                       <div
@@ -93,7 +145,7 @@
                               >
                                 <!--[if mso]><table width="100%"><tr><td><![endif]-->
                                 <h1
-                                  style='margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; font-weight: 700;'
+                                  style='margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; font-weight: 700; color: #000000;'
                                 >
                                   <div>Welcome to TAccSo – Your AI-Powered Finance and Accounting Assistant</div>
                                 </h1>
@@ -118,7 +170,7 @@
                                 align='left'
                               >
                                 <div
-                                  style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
+                                  style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word; color: #000000;'
                                 >
                                   <p>Welcome to TAccSo! We are excited to have you on board 🙌</p>
                                   <br/>
@@ -126,7 +178,7 @@
                                   <br/>
                                   <p><strong>Getting Started:</strong></p>
                                   <ul>
-                                    <li><strong>Access TAccSo:</strong> <a href="https://chat.taccso.com/">Click here to open TAccSo AI Chat 💻</a></li>
+                                    <li><strong>Access TAccSo:</strong> <a href="https://chat.taccso.com/" style="color: #0000ee; text-decoration: underline;">Click here to open TAccSo AI Chat 💻</a></li>
                                     <li><strong>On Your Laptop:</strong> Bookmark the link or add a shortcut on your desktop for easy access.</li>
                                     <li><strong>On Your Mobile Device:</strong> Add TAccSo to your home screen for a convenient app-like experience. If you are using a mobile browser, tap the arrow or 3 dots in the top right corner, then select 'Add to Home Screen' 📱</li>
                                   </ul>
@@ -139,7 +191,7 @@
                                     <li><strong>Advice Hub:</strong> provides detailed, thoughtful answers on almost any question 🏝️</li>
                                   </ul>
                                   <br/>
-                                  <p>Your feedback is invaluable in helping us improve. Please feel free to join our <a href="https://chat.whatsapp.com/IrcZTfHgqKh8xDDJi0bWAC">WhatsApp Feedback Group</a> or email dheren@taccso.com and ayush@taccso.com with any queries.</p>
+                                  <p>Your feedback is invaluable in helping us improve. Please feel free to join our <a href="https://chat.whatsapp.com/IrcZTfHgqKh8xDDJi0bWAC" style="color: #0000ee; text-decoration: underline;">WhatsApp Feedback Group</a> or email dheren@taccso.com and ayush@taccso.com with any queries.</p>
                                 </div>
                               </td>
                             </tr>
@@ -193,7 +245,7 @@
                                 align='left'
                               >
                                 <div
-                                  style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
+                                  style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word; color: #000000;'
                                 >
                                   <p>Warm regards,</p>
                                   <p>TAccSo Team</p>
@@ -218,7 +270,7 @@
                                 align='left'
                               >
                                 <div
-                                  style='font-size: 14px; line-height: 140%; text-align: right; word-wrap: break-word;'
+                                  style='font-size: 14px; line-height: 140%; text-align: right; word-wrap: break-word; color: #000000;'
                                 >
                                   <div>
                                     <div><sub>© {{year}} TAccSo. All rights reserved.</sub></div>
