Email subject changes

--- a/api/server/utils/emails/inviteUser.handlebars
+++ b/api/server/utils/emails/inviteUser.handlebars
@@ -147,7 +147,7 @@
                                 <h1
                                   style='margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; font-weight: 700; color: #000000;'
                                 >
-                                  <div>Welcome to TAccSo – Your AI-Powered Finance and Accounting Assistant</div>
+                                  <div>Welcome to TAccSo! We are excited to have you on board 🙌</div>
                                 </h1>
                                 <!--[if mso]></td></tr></table><![endif]-->
                               </td>
@@ -172,8 +172,6 @@
                                 <div
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word; color: #000000;'
                                 >
-                                  <p>Welcome to TAccSo! We are excited to have you on board 🙌</p>
-                                  <br/>
                                   <p>Our mission is to help you streamline your finance, tax, and accounting workflows through AI-powered solutions that offer quick insights, detailed summaries, and efficient task extraction.</p>
                                   <br/>
                                   <p><strong>Getting Started:</strong></p>
